--- a/index.html
+++ b/index.html
@@ -23,15 +23,7 @@
         <h1>Bromas</h1>
         <p id="jokeText"></p>
         <button onclick="showRandomJoke()" class="btn">Otra broma</button>
-        <button onclick="goToSection('triviaSection')" class="btn">Ya, quiero seguir</button>
-    </div>
-
-    <div id="triviaSection" class="section" style="display:none;">
-        <h1>Trivia</h1>
-        <div id="triviaQuestion"></div>
-        <div id="triviaOptions"></div>
-        <p>Puntos: <span id="score">0</span></p>
-        <button onclick="goToSection('section1')" class="btn" style="display:none;" id="nextSectionBtn">Siguiente</button>
+        <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn" style="display:none;">Ya, quiero seguir</button>
     </div>
 
     <div id="section1" class="section" style="display:none;">
