--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="jokesSection" class="section" style="display:none;">
         <h1>Bromas</h1>
         <p id="jokeText"></p>
-        <button onclick="showRandomJoke()" class="btn">Otra broma</button>
+        <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Otra broma</button>
         <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn" style="display:none;">Ya, quiero seguir</button>
     </div>
 
