--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
+    <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api"></script>
 </head>
 <body>
 
@@ -74,6 +76,14 @@
         <div class="hidden-heart" onclick="revealSecretMessage()">💖</div>
         <p id="finalSecretMessage" class="hidden-message">Mi amor por ti es infinito y cada día crece más. Eres mi todo. 💘</p>
         <button onclick="goToSection('finalSurprise')" class="btn">Regresar</button>
+    </div>
+
+    <div id="arSection" class="section" style="display:none;">
+        <h1>Modo de Realidad Aumentada</h1>
+        <video id="video" width="720" height="560" autoplay muted></video>
+        <canvas id="overlay" width="720" height="560"></canvas>
+        <div id="arMessage" class="ar-message"></div>
+        <button onclick="goToSection('intro')" class="btn">Regresar</button>
     </div>
 
     <div class="hearts"></div>
