--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api"></script>
 </head>
-<body>
+<body onload="startCountdown()">
 
     <div id="errorSection" class="section">
         <h1>Error al cargar la página</h1>
