--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="errorSection" class="section" style="display:none;">
         <h1>Error al cargar la página</h1>
-        <p>Lo sentimos, algo salió mal. Redirigiendo en <span id="countdown">10</span> segundos...</p>
+        <p>Lo sentimos, algo salió mal.</p>
     </div>
 
     <div id="intro" class="section">
