--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api"></script>
 </head>
-<body onload="startCountdown(); startInactivityTimer();">
+<body onload="startCountdown();">
 
     <div id="errorSection" class="section">
         <h1>Error 404: Página no encontrada...</h1>
@@ -96,11 +96,6 @@
             <button id="modalNoBtn" class="btn">No</button>
             <p id="errorMessage" style="display:none; color:red;"></p>
         </div>
-    </div>
-
-    <div id="ninjaMode" class="ninja-mode" style="display:none;">
-        <h1>No puedes ignorarme por siempre...</h1>
-        <p>¡Vuelve a interactuar conmigo! 😏</p>
     </div>
 
     <script src="script.js"></script>
