--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap">
     <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api"></script>
 </head>
@@ -22,7 +22,7 @@
     </div>
 
     <div id="jokesSection" class="section" style="display:none;">
-        <h1>Bromas</h1>
+        <h1>Risas y Cariño</h1>
         <p id="jokeText"></p>
         <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Otra broma</button>
         <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn" style="display:none;">Ya, quiero seguir</button>
