--- a/index.html
+++ b/index.html
@@ -89,24 +89,21 @@
     <div id="restrictedSectionUnlocked" class="section" style="display:none;">
         <h2>¡Bienvenido a la Zona Especial!</h2>
         <p>Has demostrado tus habilidades. Disfruta de este espacio exclusivo.</p>
-        <audio controls>
+        <audio controls autoplay>
             <source src="ruta_de_tu_cancion.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
         </audio>
         <div id="songLyrics" class="lyrics">
-            <p id="line1"></p>
-            <p id="line2"></p>
-            <p id="line3"></p>
-            <p id="line4"></p>
-            <p id="line5"></p>
-            <p id="line6"></p>
-            <p id="line7"></p>
-            <p id="line8"></p>
-            <p id="line9"></p>
-            <p id="line10"></p>
-            <p id="line11"></p>
-            <p id="line12"></p>
-            <p id="line13"></p>
+            <p id="line1" class="lyric-line"></p>
+            <p id="line2" class="lyric-line"></p>
+            <p id="line3" class="lyric-line"></p>
+            <p id="line4" class="lyric-line"></p>
+            <p id="line5" class="lyric-line"></p>
+            <p id="line6" class="lyric-line"></p>
+            <p id="line7" class="lyric-line"></p>
+            <p id="line8" class="lyric-line"></p>
+            <p id="line9" class="lyric-line"></p>
+            <p id="line10" class="lyric-line"></p>
         </div>
         <button onclick="goToSection('thankYou')" class="btn">Regresar</button>
     </div>
