--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
-    <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api"></script>
+    <script defer src="script.js"></script>
 </head>
 <body onload="startCountdown();">
 
@@ -89,10 +88,6 @@
     <div id="restrictedSectionUnlocked" class="section" style="display:none;">
         <h2>¡Bienvenido a la Zona Especial!</h2>
         <p>Has demostrado tus habilidades. Disfruta de este espacio exclusivo.</p>
-        <audio controls autoplay>
-            <source src="ruta_de_tu_cancion.mp3" type="audio/mpeg">
-            Tu navegador no soporta el elemento de audio.
-        </audio>
         <div id="songLyrics" class="lyrics">
             <p id="line1" class="lyric-line"></p>
             <p id="line2" class="lyric-line"></p>
@@ -105,6 +100,7 @@
             <p id="line9" class="lyric-line"></p>
             <p id="line10" class="lyric-line"></p>
         </div>
+        <p id="caringMessage" class="hidden-message">Eres la persona más maravillosa que he conocido. Cada día contigo es una bendición. Te amo con todo mi corazón. 💖</p>
         <button onclick="goToSection('thankYou')" class="btn">Regresar</button>
     </div>
 
@@ -118,6 +114,5 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
 </body>
 </html>
