--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
     <script defer src="script.js"></script>
 </head>
-<body onload="startCountdown();">
+<body>
 
     <div id="errorSection" class="section">
         <h1>Error 404: Página no encontrada...</h1>
-        <p>Redirigiendo en <span id="countdown">10</span> segundos...</p>
+        <button class="btn" onclick="goToSection('intro')">Continuar</button>
     </div>
 
     <div id="intro" class="section" style="display:none;">
