--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <div id="visitCounter" class="counter"></div>
 
     <div id="errorSection" class="section">
         <h1>Error 404: Página no encontrada...</h1>
