--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div id="visitCounter" class="counter"></div>
+    <div id="visitCounter" class="counter">Visitas: 0</div>
 
     <div id="errorSection" class="section">
         <h1>Error 404: Página no encontrada...</h1>
@@ -41,7 +41,7 @@
         <h2>Eres mi persona especial</h2>
         <p>No soy experto en amor, pero tú y yo juntos, eso sí que tiene sentido.</p>
         <div class="hidden-heart" onclick="revealSecretMessage()">💖</div>
-        <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se sien[...]
+        <p id="secretMessage" class="hidden-message">Eres como la brisa que acaricia sin prisa, como la luna que ilumina sin pedir nada a cambio. En un mundo de pasos apresurados, contigo todo se sien[…]</p>
         <button onclick="goToSection('section3')" class="btn">Siguiente</button>
         <button onclick="goToSection('section1')" class="btn">Regresar</button>
         <div class="hidden-heart" onclick="revealCode('2')">💖</div>
@@ -66,7 +66,7 @@
 
     <div id="finalSurprise" class="section" style="display:none;">
         <h2>Mi confesión más sincera</h2>
-        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabr[...]
+        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabr[…]</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
         <button onclick="goToSection('section3')" class="btn">Regresar</button>
     </div>
