--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p id="jokeText"></p>
         <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Otra broma</button>
         <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn" style="display:none;">Ya, quiero seguir</button>
+        <p id="countdownTimer" style="display:none;">Pasando en 10 segundos...</p>
     </div>
 
     <div id="section1" class="section" style="display:none;">
