--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div id="finalSurprise" class="section" style="display:none;">
         <h2>Mi confesión más sincera</h2>
-        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabr[…]</p>
+        <p>Desde que te conocí, supe que eras alguien especial. Quiero que sepas que eres la persona más importante para mí y que cada momento contigo es un tesoro. Te amo más de lo que las palabras pueden expresar.</p>
         <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
         <button onclick="goToSection('section3')" class="btn">Regresar</button>
     </div>
