--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Risas y Cariño</h1>
         <p id="jokeText"></p>
         <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Otra broma</button>
-        <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn" style="display:none;">Ya, quiero seguir</button>
+        <button id="nextSectionBtn" class="btn" style="display:none;">Ya, quiero seguir</button>
         <p id="countdownTimer" style="display:none;">Pasando en 10 segundos...</p>
     </div>
 
