--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="errorSection" class="section" style="display:none;">
         <h1>Error 404: Página no encontrada...</h1>
-        <button class="btn" onclick="goToSection('intro')">Continuar</button>
+        <p>Redirigiendo en <span id="countdown">10</span> segundos...</p>
     </div>
 
     <div id="intro" class="section" style="display:none;">
