--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 </head>
 <body>
 
-    <div id="loadingSection" class="section">
-        <h1>Cargando...</h1>
-        <div class="loader"></div>
-    </div>
-
     <div id="errorSection" class="section" style="display:none;">
         <h1>Error 404: Página no encontrada...</h1>
         <p>Redirigiendo en <span id="countdown">10</span> segundos...</p>
     </div>
 
-    <div id="intro" class="section" style="display:none;">
+    <div id="intro" class="section">
         <h1 id="welcomeMessage">¡Bienvenida a tu página de San Valentín! 💖</h1>
         <button onclick="goToSection('jokesSection')" class="btn">Haz clic para ver algo especial</button>
     </div>
