--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>San Valentín</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
-    <script defer src="scripts.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
 
