--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
     </div>
 
     <div id="finalSurprise" class="section" style="display:none;">
-        <h2>Mi confesión más sincera</h2>
-        <p>Te agradezco por cada momento juntos. Eres mi mayor tesoro y fuente de felicidad. Cada día a tu lado es único y especial. Te amo con todo mi corazón.</p>
-        <button onclick="goToSection('thankYou')" class="btn">Finalizar</button>
-        <button onclick="goToSection('section3')" class="btn">Regresar</button>
+        <h2>Un pequeño gesto para ti</h2>
+        <p>Al final, la vida no se trata solo de grandes gestos, sino de esos pequeños momentos que nos hacen sentir especiales. Así que, este es mi pequeño gesto para ti, porque, aunque ya lo sabes, nunca está de más recordarte lo increíble que eres. 💫🎁</p>
+        <p>Redirigiendo a la página principal en <span id="redirectCountdown">10</span> segundos...</p>
     </div>
 
     <div id="thankYou" class="section" style="display:none;">
