--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="jokesSection" class="section" style="display:none;">
         <h1>Risas y Cariño</h1>
         <p id="jokeText"></p>
-        <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Otra broma</button>
+        <button id="anotherJokeBtn" onclick="showRandomJoke()" class="btn">Continuar</button>
         <button id="nextSectionBtn" onclick="goToSection('section1')" class="btn centered">Ya, quiero seguir</button>
     </div>
 
