--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="finalMessageModal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close" onclick="closeFinalMessageModal()">&times;</span>
-            <p id="finalMessage">¡Felicidades! Has llegado al final de este pequeño viaje y desbloqueado algo más que solo bromas (aunque no te preocupes, esas no van a faltar 😜). Este detalle es solo una muestra de todo lo que significas para mí. Gracias por estar siempre ahí, incluso cuando me pongo creativo con mis chistes. Lo mejor está por venir… o no, quién sabe. Lo importante es que espero haberte sacado una sonrisa, ¡y si no lo hice, al menos lo intenté con mucho cariño!</p>
+            <p id="finalMessageContent">¡Felicidades! Has llegado al final de este pequeño viaje y desbloqueado algo más que solo bromas (aunque no te preocupes, esas no van a faltar 😜). Este detalle es solo una muestra de todo lo que significas para mí. Gracias por estar siempre ahí, incluso cuando me pongo creativo con mis chistes. Lo mejor está por venir… o no, quién sabe. Lo importante es que espero haberte sacado una sonrisa, ¡y si no lo hice, al menos lo intenté con mucho cariño!</p>
         </div>
     </div>
 
